// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCurrencyFormat returns the expected format config 1`] = `
Object {
  "decimalSymbol": ",",
  "maxFractionDigits": 2,
  "prefix": "",
  "suffix": " €",
  "thousandsSeparatorSymbol": ".",
}
`;

exports[`createCurrencyFormat returns the expected format config 2`] = `
Object {
  "decimalSymbol": ".",
  "maxFractionDigits": 2,
  "prefix": "$",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 3`] = `
Object {
  "decimalSymbol": ".",
  "maxFractionDigits": 2,
  "prefix": "￥",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 4`] = `
Object {
  "decimalSymbol": ".",
  "maxFractionDigits": 2,
  "prefix": "£",
  "suffix": "",
  "thousandsSeparatorSymbol": ",",
}
`;

exports[`createCurrencyFormat returns the expected format config 5`] = `
Object {
  "decimalSymbol": ",",
  "maxFractionDigits": 2,
  "prefix": "R$",
  "suffix": "",
  "thousandsSeparatorSymbol": ".",
}
`;

exports[`createCurrencyFormat returns the expected format config 6`] = `
Object {
  "decimalSymbol": null,
  "maxFractionDigits": 0,
  "prefix": "",
  "suffix": " JPY",
  "thousandsSeparatorSymbol": " ",
}
`;
